fond de page + page competences

--- a/src/styles/Bodycss.css
+++ b/src/styles/Bodycss.css
@@ -21,7 +21,16 @@
     border-radius: 30px;
 }
 
+.ContainerSocialProfil {
+    width: 90%;
+}
+
 .ContainerSocialProfil img {
     max-width: 5%;
+
+}
+
+.ContainerSocialProfil a {
+    padding: 1%;
 
 }
